--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["FerreolS <ferreol.soulez@univ-lyon1.fr>"]
 version = "0.0.0"
 
 [deps]
+BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EasyFITS = "a977f4a2-36a7-4172-89e7-19c2726f82e5"
+InterpolationKernels = "16730964-a2ec-11e9-36fa-47a4f82bfac6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 OptimPackNextGen = "080ffe24-4a27-4ab0-ad71-7b624e73ef8d"
@@ -14,6 +16,7 @@ Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TwoDimensional = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
@@ -21,9 +24,11 @@ WeightedData = "198d7fc6-4dbd-4d01-be45-be9677e11b0d"
 ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
 
 [compat]
+BandedMatrices = "1.9.4"
 ConcreteStructs = "0.2.3"
 DelimitedFiles = "1.9.1"
 EasyFITS = "0.7.0"
+InterpolationKernels = "0.2.6"
 LinearAlgebra = "1.11.0"
 OhMyThreads = "0.8.3"
 OptimPackNextGen = "0.4.3"
@@ -31,6 +36,7 @@ Optimisers = "0.4.6"
 Parameters = "0.12.3"
 ProgressMeter = "1.11.0"
 Random = "1.11.0"
+SparseArrays = "1.11.0"
 StaticArrays = "1.9.15"
 StatsBase = "0.34.6"
 TwoDimensional = "0.5.2"
