--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,9 @@ Random = "1"
 SparseArrays = "1"
 StaticArrays = "1"
 StatsBase = "0.34"
+Test = "1"
 TwoDimensional = "0.5"
+WeightedData = *
 ZippedArrays = "0.2"
 julia = "1.10"
 
