--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
           localregistry: |
             https://github.com/emmt/EmmtRegistry.git
       - run: julia --color=yes -e 'using Pkg; Pkg.add("Aqua")'
-      - run: julia --project=@. --color=yes -e 'using Aqua, FastPIC; Aqua.test_all(FastPIC; ambiguities=true)'
+      - run: julia --project=@. --color=yes -e 'using Aqua, FastPIC; Aqua.test_all(FastPIC; unbound_args=(broken=true,),ambiguities=true)'
   # docs:
   #   name: Documentation
   #   runs-on: ubuntu-latest
