--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.0.0"
 
 [deps]
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
+ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EasyFITS = "a977f4a2-36a7-4172-89e7-19c2726f82e5"
@@ -23,8 +24,12 @@ TwoDimensional = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
 WeightedData = "198d7fc6-4dbd-4d01-be45-be9677e11b0d"
 ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
 
+[sources]
+WeightedData = {url = "https://github.com/FerreolS/WeightedData.jl"}
+
 [compat]
 BandedMatrices = "1"
+ChunkSplitters = "3.1.2"
 ConcreteStructs = "0.2"
 DelimitedFiles = "1"
 EasyFITS = "0.7"
@@ -50,6 +55,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[sources]
-WeightedData = {url = "https://github.com/FerreolS/WeightedData.jl"}
