--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["FerreolS <ferreol.soulez@univ-lyon1.fr>"]
 version = "0.0.0"
 
 [deps]
+Atomix = "a9b6321e-bd34-4604-b9c9-b65b8de01458"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
@@ -28,6 +29,7 @@ ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
 WeightedData = {url = "https://github.com/FerreolS/WeightedData.jl"}
 
 [compat]
+Atomix = "1.1.2"
 BandedMatrices = "1"
 ChunkSplitters = "3.1.2"
 ConcreteStructs = "0.2"
