--- a/Project.toml
+++ b/Project.toml
@@ -18,9 +18,11 @@ Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StructuredArrays = "2e8cd123-6858-488d-b42d-068777248635"
 TwoDimensional = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
 WeightedData = "198d7fc6-4dbd-4d01-be45-be9677e11b0d"
 ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
@@ -43,9 +45,11 @@ Optimisers = "0.4"
 Parameters = "0.12"
 ProgressMeter = "1"
 Random = "1"
+Setfield = "1.1.2"
 SparseArrays = "1"
 StaticArrays = "1"
 StatsBase = "0.34"
+StructuredArrays = "0.2.22"
 Test = "1"
 TwoDimensional = "0.5"
 WeightedData = "0"
