Add  regridding functionality

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EasyFITS = "a977f4a2-36a7-4172-89e7-19c2726f82e5"
 InterpolationKernels = "16730964-a2ec-11e9-36fa-47a4f82bfac6"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 OptimPackNextGen = "080ffe24-4a27-4ab0-ad71-7b624e73ef8d"
@@ -18,6 +19,7 @@ Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ScatteredInterpolation = "3f865c0f-6dca-5f4d-999b-29fe1e7e3c92"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -38,6 +40,7 @@ ConcreteStructs = "0.2"
 DelimitedFiles = "1"
 EasyFITS = "0.7"
 InterpolationKernels = "0.2"
+Interpolations = "0.16.2"
 LinearAlgebra = "1"
 OhMyThreads = "0.8"
 OptimPackNextGen = "0.4"
@@ -45,6 +48,7 @@ Optimisers = "0.4"
 Parameters = "0.12"
 ProgressMeter = "1"
 Random = "1"
+ScatteredInterpolation = "0.3.6"
 Setfield = "1.1.2"
 SparseArrays = "1"
 StaticArrays = "1"
