--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EasyFITS = "a977f4a2-36a7-4172-89e7-19c2726f82e5"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 InterpolationKernels = "16730964-a2ec-11e9-36fa-47a4f82bfac6"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -39,12 +40,13 @@ ChunkSplitters = "3.1.2"
 ConcreteStructs = "0.2"
 DelimitedFiles = "1"
 EasyFITS = "0.7"
+Functors = "0.4.12"
 InterpolationKernels = "0.2"
 Interpolations = "0.16.2"
 LinearAlgebra = "1"
 OhMyThreads = "0.8"
 OptimPackNextGen = "0.4"
-Optimisers = "0.4"
+Optimisers = "0.3"
 Parameters = "0.12"
 ProgressMeter = "1"
 Random = "1"
