add new operators.jl file for lenslet convolution functionality and update Project.toml dependencies acordingly

--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,22 @@
 name = "FastPIC"
 uuid = "b925a9a2-b992-4366-b7a4-c4262a454b9a"
-authors = ["FerreolS <ferreol.soulez@univ-lyon1.fr>"]
 version = "0.0.0"
+authors = ["FerreolS <ferreol.soulez@univ-lyon1.fr>"]
 
 [deps]
+AbstractNFFTs = "7f219486-4aa7-41d6-80a7-e08ef20ceed7"
 Atomix = "a9b6321e-bd34-4604-b9c9-b65b8de01458"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
+Bessels = "0e736298-9ec6-45e8-9647-e4fc86a2fe38"
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EasyFITS = "a977f4a2-36a7-4172-89e7-19c2726f82e5"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 InterpolationKernels = "16730964-a2ec-11e9-36fa-47a4f82bfac6"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 OptimPackNextGen = "080ffe24-4a27-4ab0-ad71-7b624e73ef8d"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
@@ -26,6 +30,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructuredArrays = "2e8cd123-6858-488d-b42d-068777248635"
 TwoDimensional = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
 WeightedData = "198d7fc6-4dbd-4d01-be45-be9677e11b0d"
 ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
 
@@ -33,15 +39,19 @@ ZippedArrays = "8051824b-fc5e-4603-89c4-0e6ea551cb88"
 WeightedData = {url = "https://github.com/FerreolS/WeightedData.jl"}
 
 [compat]
+AbstractNFFTs = "0.8.2"
 Atomix = "1.1.2"
 BandedMatrices = "1"
+Bessels = "0.2.8"
 ChunkSplitters = "3.1.2"
 ConcreteStructs = "0.2"
 DelimitedFiles = "1"
 EasyFITS = "0.7"
+FFTW = "1.10.0"
 InterpolationKernels = "0.2"
 Interpolations = "0.16.2"
 LinearAlgebra = "1"
+NFFT = "0.13.7"
 OhMyThreads = "0.8"
 OptimPackNextGen = "0.4"
 Optimisers = "0.4"
@@ -56,6 +66,8 @@ StatsBase = "0.34"
 StructuredArrays = "0.2.22"
 Test = "1"
 TwoDimensional = "0.5"
+Unitful = "1.25.0"
+UnitfulAngles = "0.7.2"
 WeightedData = "0"
 ZippedArrays = "0.2"
 julia = "1.10"
